Revise NamedParameterUtilsTests for consistency